--- a/.github/workflows/devcontainer.yaml
+++ b/.github/workflows/devcontainer.yaml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "main"
+      - "master"
     tags:
       - "v*.*.*"
   pull_request:
-    branches: [main]    
+    branches: [master]    
 
       
 jobs:
